# ClientServerCpp

./: .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: main.cpp
src/libclient/: CMakeLists.txt
src/libclient/libbuffer/: buffer.cpp  buffer.hpp
src/libclient/libsocket/: socket.cpp  socket.hpp
src/libclient/libthreads/: threads.cpp  threads.hpp
src/libhandler/: handler.cpp  handler.hpp
src/libserver/: socket.cpp  socket.hpp
src/server/: main.cpp
src/tests/: libbuffer_test.cpp  libhandler_test.cpp
